# tanks

./: Cargo.toml
src/: draw.rs  game.rs  log4rs.yaml  main.rs  tank.rs  terrain.rs
src/draw/: components.rs  flat.rs  mod.rs  renderer.rs  system.rs  text.glslf  text.glslv  text.rs  traits.rs  window.rs
src/draw/shaders/: flat.f.glsl  flat.v.glsl
src/draw/tank/: mod.rs  tank.f.glsl
src/draw/terrain/: mod.rs  terrain.f.glsl  terrain.v.glsl
src/engine/: Cargo.toml  game.rs  mod.rs  traits.rs  window_glutin.rs  window_sdl.rs
src/engine/src/: components.rs  game.rs  lib.rs  renderer.rs  traits.rs  window_glutin.rs  window_sdl.rs
src/engine/src/draw/: flat.rs  mod.rs
src/explosion/: draw.rs  explosion.f.glsl  explosion.v.glsl  mod.rs
src/game/: ai.rs  controls.rs  mod.rs  player.rs  state.rs
src/physics/: components.rs  gravity.rs  inertia.rs  mod.rs  settle.rs
src/projectile/: collision.rs  draw.rs  firing.rs  mod.rs  projectile.v.glsl
src/tank/: control.rs  draw.rs  mod.rs
src/terrain/: draw.rs  mod.rs  terrain.f.glsl  terrain.g.glsl  terrain.v.glsl
src/text/: mod.rs
src/text/draw/: font.rs  mod.rs  text.f.glsl  text.v.glsl
