[package]
name = "tanks"
version = "0.1.0"
authors = ["D. Ryan Hild <d.ryan.hild@gmail.com>"]

[dependencies]
log4rs = "^0.6"
log = "^0.3"
engine = { path = "src/engine", version = "0.1" }
gfx = "0.14"
cgmath = "0.12"
specs = "0.8"
rand = "0.3"

[features]
default = []

[package.metadata.android]
android_version = 19
fullscreen = true
package_name = "net.dryanhild.rust.tanks"
project_name = "rust.tanks"
package_label = "Rusty Tanks"
