[package]
name = "tanks"
version = "0.1.0"
authors = ["D. Ryan Hild <d.ryan.hild@gmail.com>"]

[dependencies]
log4rs = "^0.6"
log = "^0.3"
gfx = "0.14"
gfx_device_gl = { version = "0.13", optional = true }
gfx_window_glutin = { version = "0.14", optional = true }
glutin = { version = "0.7", optional = true }
gfx_window_sdl = { version = "0.5", optional = true }
sdl2 = { version = "0.28", optional = true }
cgmath = "0.12"
specs = "0.8"
rand = "0.3"

[features]
default = ["window_glutin"]
window_glutin = ["gfx_window_glutin", "glutin", "gfx_device_gl"]
window_sdl = ["gfx_window_sdl", "sdl2"]

[package.metadata.android]
android_version = 19
fullscreen = true
package_name = "net.dryanhild.rust.tanks"
project_name = "rust.tanks"
package_label = "Rusty Tanks"
